--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,6 +5,9 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: polars-query-server
     steps:
       - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
@@ -26,4 +29,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage-log
-          path: coverage.log
+          path: polars-query-server/coverage.log
