--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,9 +22,16 @@ jobs:
         run: cargo install cargo-tarpaulin
       - name: Coverage
         run: |
-          cargo tarpaulin --workspace --timeout 120 --out Xml > coverage.log
-          grep "line coverage" coverage.log | tee coverage_summary.txt
-          cat coverage_summary.txt >> $GITHUB_STEP_SUMMARY
+          cargo tarpaulin --workspace --timeout 120 --out Json --output-dir . > coverage.log
+          jq -r '.files[] | "\(.path | join("/")) \(.covered) \(.coverable)"' tarpaulin-report.json > coverage_raw.txt
+          echo "| File | Coverage |" >> $GITHUB_STEP_SUMMARY
+          echo "| --- | --- |" >> $GITHUB_STEP_SUMMARY
+          awk '{ pct=($2/$3)*100; printf "| %s | %.2f%% |\n", $1, pct }' coverage_raw.txt >> $GITHUB_STEP_SUMMARY
+      - name: Build Docker image
+        run: |
+          docker build -t polars-query-server:latest .
+          ID=$(docker images --no-trunc --quiet polars-query-server:latest)
+          echo "| Docker Image | $ID |" >> $GITHUB_STEP_SUMMARY
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
