--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,6 +27,8 @@ jobs:
           echo "| File | Coverage |" >> $GITHUB_STEP_SUMMARY
           echo "| --- | --- |" >> $GITHUB_STEP_SUMMARY
           awk '{ pct=($3==0)?0:($2/$3)*100; printf "| %s | %.2f%% |\n", $1, pct }' coverage_raw.txt >> $GITHUB_STEP_SUMMARY
+          total=$(awk '{cov+=$2; tot+=$3} END { if(tot==0) print 0; else printf "%.2f", (cov/tot)*100 }' coverage_raw.txt)
+          echo "| **Total** | ${total}% |" >> $GITHUB_STEP_SUMMARY
       - name: Build Docker image
         run: |
           docker build -t polars-query-server:latest .
