Fix Docker build and coverage summary

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Coverage
         run: |
           cargo tarpaulin --timeout 120 --out Json --output-dir . --lib > coverage.log
-          jq -r '.files[] | "\(.path | join("/")) \(.covered) \(.coverable)"' tarpaulin-report.json > coverage_raw.txt
+          jq -r '.files[] | "\(.path[-1]) \(.covered) \(.coverable)"' tarpaulin-report.json > coverage_raw.txt
           echo "| File | Coverage |" >> $GITHUB_STEP_SUMMARY
           echo "| --- | --- |" >> $GITHUB_STEP_SUMMARY
           awk '{ pct=($3==0)?0:($2/$3)*100; printf "| %s | %.2f%% |\n", $1, pct }' coverage_raw.txt >> $GITHUB_STEP_SUMMARY
